codama-macros/tests/codama_attribute/encoding_directive/invalid_encoding.fail.stderr
error: invalid encoding
 --> tests/codama_attribute/encoding_directive/invalid_encoding.fail.rs:3:21
  |
3 | #[codama(encoding = invalid)]
  |                     ^^^^^^^
