codama-macros/tests/codama_attribute/encoding_directive/invalid_encoding.fail.rs
use codama::codama;

#[codama(encoding = invalid)]
pub struct Test;

fn main() {}
